--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "html2canvas-pro": "^1.5.13",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
