--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
